# rustvm

./: .gitignore  Cargo.toml  LICENSE  README.md
generator/: README.md  RustGen.sln
generator/RustGen/: Opcode.cs  OpcodeGenerator.cs  OpcodeParser.cs  Program.cs  RustGen.csproj
generator/RustGen/in/: opcodes.txt
src/: README  app.yml  constants.rs  cpu.rs  instruction.rs  instructions.rs  main.rs  memory.rs  traits.rs  types.rs
src/instruction/: accum.rs  controlflow.rs  generic.rs
src/instructions/: README  adc.rs  and.rs  asl.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bmi.rs  bne.rs  bpl.rs  brk.rs  bvc.rs  bvs.rs  clc.rs  cld.rs  cli.rs  clv.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  generic.rs  inc.rs  inx.rs  iny.rs  jsr.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  nop.rs  ora.rs  pha.rs  php.rs  pla.rs  plp.rs  (+17 more)
