[package]
name = "rustvm2"
version = "0.1.0"
authors = ["Guido Docter <guido.docter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }

[profile.release]
# "s"(peed) or (si)"z"(e)
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'